task: Added several links for header

--- a/final.html
+++ b/final.html
@@ -9,12 +9,18 @@
     <meta name="author" content="SitePoint">
     <link rel="stylesheet" href="cs/final.css">
 </head>
-
     <body>
-
-
-
-
-
+<div id="wrapper" class="fullborder">
+    <div id="header" class="fullboarder">
+        <nav>
+            <ul>
+                <li class="link">Resume</li>
+                <li class="link">Portfolio</li>
+                <li class="link">About</li>
+                <li style="float: left" id=""><a href="final.html">Main</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
 </body>
 </html>
