task: Adding "GitHub" content. Also CSS code.

--- a/final.html
+++ b/final.html
@@ -17,10 +17,17 @@
                 <li class="link">Resume</li>
                 <li class="link">Portfolio</li>
                 <li class="link">About</li>
-                <li style="float: left" id=""><a href="final.html">Main</a></li>
+                <li style="float: left" id="main"><a href="final.html">Main</a></li>
             </ul>
         </nav>
     </div>
+    <div id="content" class="fullborder">
+        <img src="imgs/git_icon.png" alt="git" class="img1" height="225" width="225"/>
+        <p>
+            Git Hub: Through this service, we learned the basic fundamentals of github to know what its like to work on
+            coding projects as a team.
+        </p>
+</div>
 </div>
 </body>
 </html>
