task: Added more "GitHub" content.

--- a/final.html
+++ b/final.html
@@ -25,7 +25,12 @@
         <img src="imgs/git_icon.png" alt="git" class="img1" height="225" width="225"/>
         <p>
             Git Hub: Through this service, we learned the basic fundamentals of github to know what its like to work on
-            coding projects as a team.
+            coding projects as a team. Some of the skills I learned are;
+            - Making repositories
+            - Commits
+            - Pushes
+            -
+
         </p>
 </div>
 </div>
