task: Started sidebar content

--- a/final.html
+++ b/final.html
@@ -26,13 +26,27 @@
         <p>
             Git Hub: Through this service, we learned the basic fundamentals of github to know what its like to work on
             coding projects as a team. Some of the skills I learned are;
-            - Making repositories
-            - Commits
-            - Pushes
-            -
+
+            Making repositories
+            Commits
+            Pushes
 
         </p>
+        <img src="imgs/linux.png" alt="git" class="img2" height="261" width="220"/>
+        <p>
+
+        </p>
+        <p>
+            dsf
+        </p>
 </div>
+    <div id="sidebar" class="fullborder">
+<h1>AFS</h1>
+<p>
+    kjk
+</p>
+
+    </div>
 </div>
 </body>
 </html>
