task: Added a lot more content

--- a/final.html
+++ b/final.html
@@ -22,14 +22,20 @@
         </nav>
     </div>
     <div id="content" class="fullborder">
+        <h1><u>Skills/Programs I've Learned From This Course</u></h1>
         <img src="imgs/git_icon.png" alt="git" class="img1" height="225" width="225"/>
         <p>
-            Git Hub: Through this service, we learned the basic fundamentals of github to know what its like to work on
+            <u><strong>Git Hub:</strong></u> GitHub, a subsidiary of Microsoft, is a web-based hosting service for version
+            control using Git.
+            It is mostly used for computer code.
+            Through this service, we learned the basic fundamentals of github to know what its like to work on
             coding projects as a team. Some of the skills I learned are;
 
             Making repositories
             Commits
-            Pushes
+            Pushes.
+
+            Git is also a version control systems which helps with the tracking of code changes.
 
         </p>
         <img src="imgs/linux.png" alt="git" class="img2" height="261" width="220"/>
@@ -37,14 +43,19 @@
 
         </p>
         <p>
-            dsf
+            <u><strong>Linux:</strong></u> Linux is a family of open source Unix-like operating systems based on the Linux
+            kernel, an operating system kernel first released on September 17, 1991 by Linus Torvalds.
+            Linux is typically packaged in a Linux distribution.
         </p>
 </div>
     <div id="sidebar" class="fullborder">
-<h1>AFS</h1>
+        <h2><u>WebStorm</u></h2>
 <p>
-    kjk
+    An IDE that can utilize OpenAFS and can access and manage files through SSH. provides full support for JavaScript,
+    TypeScript, HTML, CSS as well as for frameworks such as React, Angular, and Vue.js right out of the box,
+    no additional plugins are required.
 </p>
+        <h3><u>AFS</u></h3>
 
     </div>
 </div>
