task: Added AFS definition(From school site)

--- a/final.html
+++ b/final.html
@@ -56,6 +56,12 @@
     no additional plugins are required.
 </p>
         <h3><u>AFS</u></h3>
+        <p>
+            ​AFS is the primary academic computing environment at NJIT. The Andrew File System (AFS) is a distributed
+            file system comprised of multiple file and database servers and several hundred MacOS, Linux, Unix, and
+            Windows client computers. A very wide spectrum of both open source and commercial applications, compilers,
+            libraries, and utilities is available in AFS.
+        </p>
 
     </div>
 </div>
