task: Added HTML

--- a/final.html
+++ b/final.html
@@ -53,15 +53,17 @@
 <p>
     An IDE that can utilize OpenAFS and can access and manage files through SSH. provides full support for JavaScript,
     TypeScript, HTML, CSS as well as for frameworks such as React, Angular, and Vue.js right out of the box,
-    no additional plugins are required.
+    no additional plugins are required. This program is what we used to access AFS.
 </p>
-        <h3><u>AFS</u></h3>
+        <h2><u>AFS</u></h2>
         <p>
             ​AFS is the primary academic computing environment at NJIT. The Andrew File System (AFS) is a distributed
             file system comprised of multiple file and database servers and several hundred MacOS, Linux, Unix, and
             Windows client computers. A very wide spectrum of both open source and commercial applications, compilers,
             libraries, and utilities is available in AFS.
         </p>
+        <h2><u>HTML</u></h2>
+
 
     </div>
 </div>
