fix: Corrected some margin/sizing issues

--- a/final.html
+++ b/final.html
@@ -13,6 +13,7 @@
 <div id="wrapper" class="fullborder">
     <div id="header" class="fullboarder">
         <nav>
+            <img style="margin-top: 13px; margin-left: 31px;  float: left" src="imgs/highlander.png" width="100" height="75">
             <ul>
                 <li class="link">Resume</li>
                 <li class="link">Portfolio</li>
@@ -59,11 +60,14 @@
         <p>
             ​AFS is the primary academic computing environment at NJIT. The Andrew File System (AFS) is a distributed
             file system comprised of multiple file and database servers and several hundred MacOS, Linux, Unix, and
-            Windows client computers. A very wide spectrum of both open source and commercial applications, compilers,
-            libraries, and utilities is available in AFS.
+            Windows client computers.
         </p>
-        <h2><u>HTML</u></h2>
-
+        <h2><u>HTML/CSS</u></h2>
+        <p>
+            Hypertext Markup Language is the standard markup language for creating web pages and web applications.
+            Cascading Style Sheets is a style sheet language used for describing the presentation of a document written
+            in a markup language like HTML.
+        </p>
 
     </div>
 </div>
