Task; Started Section for projects from class

--- a/final.html
+++ b/final.html
@@ -70,6 +70,15 @@
         </p>
 
     </div>
+        <div id="work" class="fullborder">
+
+            <h3><u>Projects Made During This Semester</u></h3>
+
+
+
+
+
+        </div>
 </div>
 </body>
 </html>
