Task; Started Homepage

--- a/final.html
+++ b/final.html
@@ -18,7 +18,7 @@
                 <li class="link">Resume</li>
                 <li class="link">Portfolio</li>
                 <li class="link">About</li>
-                <li style="float: left" id="main"><a href="final.html">Main</a></li>
+                <li style="float: left" id="main"><a href="homepage.html">Homepage</a></li>
             </ul>
         </nav>
     </div>
@@ -73,9 +73,41 @@
         <div id="work" class="fullborder">
 
             <h3><u>Projects Made During This Semester</u></h3>
+            <p>
+                <img src="imgs/internet%20timeline.png" alt="git" class="img3" height="108" width="500"/>
+                <p>
+                    <h>History of the Internet/Linux Tutorial</h>
+                </p>
+                <p>
+                    <a href="https://github.com/Haz-15/assignment-2">Link to timeline/tutorial</a>
+                </p>
+            <p>
+            <img src="imgs/boilerplate.jpg" alt="git" class="img3" height="150" width="500"/>
+            </p>
+            <p>
+                <h>Html BoilerPlate & Git/Webstorm Tutorial</h>
+            </p>
+            <p>
+                <a href="https://github.com/cmh48/boiler-project">Link to tutorial</a>
+            </p>
 
+            <p>
+                <img src="imgs/z_layout.PNG" alt="git" class="img3" height="150" width="500"/>
+            </p>
+            <p>
+                <h>F & Z Layout Assignment</h>
+            </p>
+            <p>
+                <a href="https://github.com/cmh48/layout_assignment">Link to Layouts</a>
+            </p>
 
-
+            <div id="footer" class="fullborder">
+                <nav>
+                    <ul>
+                        <li><a href="https://web.njit.edu/~ab2388/final_website/final.html">Back to the top</a></li>
+                    </ul>
+                </nav>
+            </div>
 
 
         </div>
