Task; Started Homepage css

--- a/homepage.html
+++ b/homepage.html
@@ -2,9 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>HomePage</title>
+    <meta name="description" content="The HTML5 Herald">
+    <meta name="author" content="SitePoint">
+    <link rel="stylesheet" href="cs/homepage.css">
 </head>
+<header>
+    <div id="header" class="header" >
+        <h1 id="logo" class="logo"> <img style="margin-top: 13px; margin-left: 31px;  float: left" src="imgs/highlander.png" width="100" height="75"></h1>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Resume</li>
+            </ul>
+        </nav>
+    </div>
+</header>
 <body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
