--- a/final.html
+++ b/final.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title> Final Portfolio </title>
+    <title> Portfolio </title>
     <meta name="description" content="The HTML5 Herald">
     <meta name="author" content="SitePoint">
     <link rel="stylesheet" href="cs/final.css">
