Task; Trying to fix stuff

--- a/final.html
+++ b/final.html
@@ -15,9 +15,7 @@
         <nav>
             <img style="margin-top: 13px; margin-left: 31px;  float: left" src="imgs/highlander.png" width="100" height="75">
             <ul>
-                <li class="link">Resume</li>
                 <li class="link">Portfolio</li>
-                <li class="link">About</li>
                 <li style="float: left" id="main"><a href="homepage.html">Homepage</a></li>
             </ul>
         </nav>
@@ -72,9 +70,14 @@
     </div>
         <div id="work" class="fullborder">
 
-            <h3><u>Projects Made During This Semester</u></h3>
+
+            <p>
+sss
+            </p>
+            <p><h3><u>Pr</u></h3></p>
             <p>
                 <img src="imgs/internet%20timeline.png" alt="git" class="img3" height="108" width="500"/>
+            </p>
                 <p>
                     <h>History of the Internet/Linux Tutorial</h>
                 </p>
@@ -110,6 +113,8 @@
             </div>
 
 
+
+        </div>
         </div>
 </div>
 </body>
