--- a/homepage.html
+++ b/homepage.html
@@ -1,43 +1,75 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>HomePage</title>
+    <meta charset="utf-8">
+
+    <title>The HTML5 Herald</title>
     <meta name="description" content="The HTML5 Herald">
     <meta name="author" content="SitePoint">
     <link rel="stylesheet" href="cs/homepage.css">
+
 </head>
-<header>
-    <div id="header" class="header" >
-        <h1 id="logo" class="logo"> <img style="margin-top: 13px; margin-left: 31px;  float: left" src="imgs/highlander.png" width="100" height="75"></h1>
+
+<body>
+
+<div id="wrapper" class="fullborder">
+    <div id="header" class="fullborder">
         <nav>
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Resume</li>
+                <li class="link">Home</li>
+                <li class="link">Resume</li>
+                <li class="link">Portfolio</li>
+                <h1 id="logo" class="logo"> <img style="margin-top: 13px; margin-left: 31px;  float: left" src="imgs/highlander.png" width="1" height="75"></h1>
             </ul>
         </nav>
     </div>
-</header>
-<body>
+    <div id="content" class="fullborder">
+        <img src="imgs/homepage%20logo.jpg" alt="placeholder" height="768" width="1024"/></div>
+    <div id="sidebar" class="fullborder">
+        <h1>An Introduction</h1>
+        <p>Welcome and thank you for viewing my first website. The main purpose of this site is to
+            Showcase everything that I've learned in Intro to Website Development, which was taught by prof. Keith Williams.
+            Fistly, please dont equate the quality of this site to how we were taught in the class, this is only the very
+            first time I've made a site from scratch so I know it looks a bit rough. They'll definetly get better as time
+            Progresses
+            On the portfolio Page, you'll see all of the programs and terms/skills that I've picked up on during this
+            semester. On this page, you will see some info about me.
+        </p>
+    </div>
+    <div id="subinfo">
+        <div>
+            <h5> Academic Information </h5>
+            <li>Rutgers University</li>
+            <li>New Jersey Institute of Technology</li>
+            <li>Panther Academy(Paterson, NJ)</li>
 
+        </div>
+        <div>
+            <h5> Known Programs </h5>
+            <li>Python</li>
+            <li>Java</li>
+            <li>Html</li>
+            <li>CSS</li>
 
+        </div>
+        <div>
+            <h5> Major & Minor(Undergrad) </h5>
+            <li>Information Systems</li>
+            <li>Economics</li>
+        </div>
+    </div>
+    <div id="footer" class="fullborder">
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Contact</li>
+                <li>Portfolio</li>
+            </ul>
+        </nav>
+    </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</div>
 
 
 </body>
